# multipart-names

./: .gitignore  LICENSE  Makefile  README.md  changelog  multipart-names.cabal
src/Text/: MultipartNames.hs
src/Text/MultipartNames/: MultipartName.hs  Parsers.hs  Show.hs
tests/: Test.hs
tests/Text/: MultipartNamesTests.hs
