Name:                   multipart-names
Version:                0.0.0
Author:                 Eric Nedervold<nedervoldsoftware@gmail.com>
Maintainer:             Eric Nedervold<nedervoldsoftware@gmail.com>
License:                BSD3
License-File:           LICENSE
Copyright:		(c) 2015 Eric Nedervold
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -Werror
  Exposed-Modules:      Text.MultipartNames
--   Other-Modules:        Text.MultipartNames.Internal
  Build-Depends:        base >= 4 && < 5
                      , lens

Test-Suite test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       tests
  Ghc-Options:          -Wall -Werror
  Main-Is:              Test.hs
  Build-Depends:        base
                      , HUnit
                      , test-framework
                      , test-framework-hunit

Source-Repository head
  Type:                 git
  Location:             https://github.com/nedervold/multipart-names.git
