Name:                   multipart-names
Version:                0.0.0
Author:                 Eric Nedervold<nedervoldsoftware@gmail.com>
Maintainer:             Eric Nedervold<nedervoldsoftware@gmail.com>
License:                BSD3
License-File:           LICENSE
Stability:              alpha
Homepage:               http://github.com/nedervold/multipart-names
Bug-Reports:            http://github.com/nedervold/multipart-names/issues
Copyright:              (c) 2015 Eric Nedervold
Synopsis:               Handling of multipart-names in various casings
Description:

    Handles multipart names with conversion between casing styles
    including UpperCamelCase, lowerCamelCase, UPPER_UNDERSCORE, and
    lower_underscore.

Cabal-Version:          >= 1.10
Category:               Data
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Text.MultipartNames
--   Other-Modules:        Text.MultipartNames.Internal
  Build-Depends:        base >= 4 && < 5
                      , case-insensitive == 1.2.*
                      , lens == 4.8.*
                      , parsec == 3.1.*

Test-Suite test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       tests
  Ghc-Options:          -Wall
  Main-Is:              Test.hs
  Other-Modules:        Text.MultipartNamesTests
  Build-Depends:        base
                      , HUnit
                      , test-framework
                      , test-framework-hunit

Source-Repository head
  Type:                 git
  Location:             https://github.com/nedervold/multipart-names.git
